terminé génération des listes

--- a/corrige/generation_html/output/commission_complexe.html
+++ b/corrige/generation_html/output/commission_complexe.html
@@ -7,6 +7,9 @@
     <body>
         <h1>Liste de commission hiérarchisée</h1>
 
-        <ul><li>Légumes</li><ul><li>Salade</li><li>carottes</li><li>poireaux</li></ul><li>Fruits</li><ul><li>Oranges</li><li>Pommes</li><li>Poires</li><li>Mandarines</li></ul><li>Habits</li><ul><li>Hommes</li><ul><li>Pantalon</li><li>Chaussures</li></ul><li>Dames</li><ul><li>Robe</li><li>hauts-talons</li></ul></ul></ul>
+        <li><li><li><li><li><li>['Hommes', ['Pantalon', 'Chaussures'], 'Dames', ['Robe', 'hauts-talons']]</li></li></li></li></li></li>
+        
+        
     </body>
 </html>
+
